修改模板功能

--- a/templets/admin/archives_list.htm
+++ b/templets/admin/archives_list.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset={sun:global.cfg_soft_lang/}" />
-<title>{sun:field.title/}_{sun:global.cfg_webname/}</title>
+<title>{sun:global.cfg_webname/}</title>
 </head>
 <body class="articleview">
 <div class="listbox">
