--- a/templets/default/arctype_list.htm
+++ b/templets/default/arctype_list.htm
@@ -12,8 +12,8 @@
 {sun:datalist pagesize='10'}
 <tr>
 <td>{sun:field.id/}</td>
-<td>{sun:field.typeid/}</td>
-<td><a href='{sun:field.title/}'>{sun:field.title/}</a></td>
+<td>{sun:field.reid/}</td>
+<td><a href='{sun:field.title/}'>{sun:field.typename/}</a></td>
 </tr>
 {/sun:datalist}
 {sun:pagelist listitem="info,index,end,pre,next,pageno,option" listsize="10" /}
