--- a/templets/admin/admin_index.htm
+++ b/templets/admin/admin_index.htm
@@ -10,12 +10,12 @@
 <body style="overflow:hidden;">
 <div id="Nav">
 <div id="NavL">
-<a href="sortree.php" target='mainFrame'>网站栏目</a>
-<a href="index.php?ct=admin&ac=listing&to=arctype" target='mainFrame'>分类管理</a>
-<a href="index.php?ct=admin&ac=listing&to=illness" target='mainFrame'>生信管理</a>
-<a href="index.php?ct=admin&ac=listing&to=genome" target='mainFrame'>基因信息</a>
-<a href="index.php?ct=admin&ac=listing&to=customer" target='mainFrame'>客户管理</a>
-<a href="index.php?ct=admin&ac=listing&to=report" target='mainFrame'>检测报告</a>
+<a href="sortree.php" target='mainFrame'> 栏目 </a>
+<a href="index.php?ct=admin&ac=table&to=adlink" target='mainFrame'> 广告 </a>
+<a href="index.php?ct=admin&ac=&to=" target='mainFrame'> 预留 </a>
+<a href="index.php?ct=admin&ac=&to=" target='mainFrame'> 预留 </a>
+<a href="my_makelist.php" target='mainFrame'> 生成栏目 </a>
+<a href="my_makearchives.php" target='mainFrame'> 生成文档 </a>
 
 </div>
 <div class="sysbox lfloat" onMouseMove="sysbar(event)" onMouseOut="sysbar(event)" style="display:none"><a>系统管理</a>
@@ -27,12 +27,12 @@
 </div>
 <div id="NavR"><a href="?ct=admin&ac=logout" target="_parent">安全退出</a></div>
 </div>
-<iframe style="width:100%;height:99%;overflow:auto" name="mainFrame" id="mainFrame" src="" frameborder="0" noresize scrolling="yes"></iframe>
+<iframe style="width:100%;min-height:800px;overflow:auto" name="mainFrame" id="mainFrame" src="" frameborder="0" noresize scrolling="yes"></iframe>
 </div>
 </body>
 <script language="javascript">
-Dimensions(); //调用函数，获取数值 
-window.onresize=Dimensions;
-window.mainFrame.onresize=Dimensions;  
+// Dimensions(); //调用函数，获取数值 
+// window.onresize=Dimensions;
+// window.mainFrame.onresize=Dimensions;  
 </script>
 </html>
