--- a/templets/admin/admin_index.htm
+++ b/templets/admin/admin_index.htm
@@ -12,10 +12,10 @@
 <div id="NavL">
 <a href="sortree.php" target='mainFrame'> 栏目 </a>
 <a href="index.php?ct=admin&ac=table&to=adlink" target='mainFrame'> 广告 </a>
-<a href="index.php?ct=admin&ac=&to=" target='mainFrame'> 预留 </a>
-<a href="index.php?ct=admin&ac=&to=" target='mainFrame'> 预留 </a>
-<a href="my_makelist.php" target='mainFrame'> 生成栏目 </a>
-<a href="my_makearchives.php" target='mainFrame'> 生成文档 </a>
+<a href="index.php?ct=admin&ac=&to=" target='mainFrame'> -- </a>
+<a href="index.php?ct=admin&ac=&to=" target='mainFrame'> -- </a>
+<a href="make_all.php" target='mainFrame'> 生成栏目 </a>
+
 
 </div>
 <div class="sysbox lfloat" onMouseMove="sysbar(event)" onMouseOut="sysbar(event)" style="display:none"><a>系统管理</a>
