--- a/templets/admin/archives_record.htm
+++ b/templets/admin/archives_record.htm
@@ -49,7 +49,7 @@
 <label>点赞：</label><input name="click" type="text" value="{sun:var.arr.click/}" style="width:288px" />
 </li>
 <li>
-<label>图片：</label><input name="picture" type="text" value="{sun:var.arr.picture/}" style="width:288px" />
+<label>图片：</label><input name="litpic" type="text" value="{sun:var.arr.litpic/}" style="width:288px" />
 </li>
 <li><input type="submit" name="button" value="确 认 提 交" /></li>
 <li><textarea name="gbody" style="width:1000px;height:500px;">{sun:var.arr.gbody/}</textarea></li>
