--- a/templets/admin/arctype_record.htm
+++ b/templets/admin/arctype_record.htm
@@ -2,7 +2,8 @@
 <form method='post' action='index.php?' name='arctype'>
 <input type='hidden' name='to' value='arctype' />
 <input type='hidden' name='ct' value='admin' />
-<input type='hidden' name='ac' value='insert' /><ul>
+<input type='hidden' name='ac' value='update' /><ul>
+<li><label>key</label><input type='text' name='key' value='{sun:var.arr.id/}'></li>
 <li><label>reid</label><input type='text' name='reid' value='{sun:var.arr.reid/}'></li>
 <li><label>topid</label><input type='text' name='topid' value='{sun:var.arr.topid/}'></li>
 <li><label>sortrank</label><input type='text' name='sortrank' value='{sun:var.arr.sortrank/}'></li>
