--- a/templets/default/list_article.htm
+++ b/templets/default/list_article.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset={sun:global.cfg_soft_lang/}" />
+<meta http-equiv="Content-Type" content="text/html; charset={sun:global.cfg_lang/}" />
 <title>{sun:field.title/}_{sun:global.cfg_webname/}</title>
 <meta name="keywords" content="{sun:field name='keywords'/}" />
 <meta name="description" content="{sun:field name='description' function='html2text(@me)'/}" />
@@ -11,35 +11,26 @@
 {sun:include filename="head.htm"/}
 <!-- /header -->
 
-<div class="channel-nav w960 center clear">
-	<div class='sonnav'>
-	{sun:channel currentstyle="<span><a href='~typelink~' class='thisclass'>~typename~</a></span>"}
-		<span><a href='[field:typeurl/]'>[field:typename/]</a></span>{/sun:channel}
-	</div>
-</div><!-- /channel-nav -->
-
 <div class="w960 center clear mt1">
 	<div class="pleft">
 		<div class="place">
 			<strong>当前位置:</strong> {sun:field name='position'/}
 		</div><!-- /place -->
 		<div class="listbox">
-			<ul class="e2">
-{sun:list pagesize='10'}
-				<li>
-      				[field:array runphp='yes']@me = (empty(@me['litpic']) ? "" : "<a href='{@me['arcurl']}' class='preview'><img src='{@me['litpic']}'/></a>"); [/field:array]
-					<a href="[field:arcurl/]" class="title">[field:title/]</a>
-					<span class="info">
-						<small>日期：</small>[field:pubdate function="GetDateTimeMK(@me)"/]
-						<small>点击：</small>[field:click/]
-						<small>好评：</small>[field:scores/]
-					</span>
-					<p class="intro">
-						[field:description/]...
-					</p>
-				</li>
-{/sun:list}
-			</ul>
+		<ul class="e2">
+		{sun:list pagesize='10'}
+		<li>
+			<a href="[field:arcurl/]" class="title"><img src="[field:litpic/]"/>[field:title/]</a>
+			<span class="info">
+				<small>日期：</small>[field:pubdate function="GetDateTimeMK(@me)"/]
+				<small>点赞：</small>[field:click/]
+			</span>
+			<p class="intro">
+				[field:description/]...
+			</p>
+		</li>
+		{/sun:list}
+		</ul>
 		</div><!-- /listbox -->
 		<div class="sun_pages">
 			<ul class="pagelist">
@@ -62,24 +53,11 @@
 				</dd>
 			</dl>
 		</div><!-- /commend -->
-		<div id="listRtPicAD" style="margin:10px auto">{sun:myad name='listRtPicAD'/}</div>
-		<div class="hot mt1">
-			<dl class="tbox">
-				<dt><strong>热点内容</strong></dt>
-				<dd>
-					<ul class="c1 ico2">
-                    {sun:arclist row=10 orderby=click}
-                    	<li><a href="[field:arcurl/]">[field:title/]</a></li>
-                    {/sun:arclist}
-					</ul>
-				</dd>
-			</dl>
-		</div>
-        <div id="listRtPicAD2" style="margin:10px auto">{sun:myad name='listRtPicAD2'/}</div>
+		<div id="listRtPicAD" style="margin:10px auto">{sun:adlink name='listRtPicAD'/}</div>
+        <div id="listRtPicAD2" style="margin:10px auto">{sun:adlink name='listRtPicAD2'/}</div>
 
 	</div><!-- /pright -->
 </div>
-<div id="innerfooterAD" style="margin:10px auto; width:726px">{sun:myad name='innerfooterAD'/}</div>
 {sun:include filename="footer.htm"/}
 <!-- /footer -->
 
