--- a/templets/default/list_default.htm
+++ b/templets/default/list_default.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset={sun:global.cfg_soft_lang/}" />
+<meta http-equiv="Content-Type" content="text/html; charset={sun:global.cfg_lang/}" />
 <title>{sun:field.title/}_{sun:global.cfg_webname/}</title>
 <meta name="keywords" content="{sun:field name='keywords'/}" />
 <meta name="description" content="{sun:field name='description' function='html2text(@me)'/}" />
